Adopt older stream collector API
toList() was only added in Android 13. Change the code to use the more
verbose `collect(Collectors.toList())` equivalent.

Test: TH
Flag: EXEMPT mainline
Change-Id: I70de4202778513e42adf0137700a677b7aa773f2